@@ -1,6 +1,11 @@
 Revision history for Perl extension Net::SSLeay.
 
 ??????? 2018-??-??
+	- Add SSL_CTX_set_num_tickets, SSL_CTX_get_num_tickets,
+	  SSL_set_num_ticket and SSL_get_num_tickets for controlling
+	  the number of TLSv1.3 session tickets that are issued.  Add
+	  tests in 44_sess.t. Parts taken from a larger patch by Petr
+	  Pisar of RedHat.
 	- Add SSL_CTX_set_security_level, SSL_CTX_get_security_level,
 	  SSL_set_security_level and SSL_get_security_level.
 	  Add new test file 65_security_level.t.
